[package]
name = "polkadot-node-core-proposer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-timer = "3.0.1"
log = "0.4.8"
parity-scale-codec = "1.3.4"
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
wasm-timer = "0.2.4"
