[package]
name = "polkadot-node-core-proposer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-timer = "3.0.1"
log = "0.4.8"
parity-scale-codec = "1.3.4"
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
wasm-timer = "0.2.4"
