[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
futures = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.3.4" }

# Polkadot dependencies
polkadot-primitives = { path = "../../../primitives" }
polkadot-runtime-common = { path = "../../common" }
polkadot-test-runtime = { path = ".." }
polkadot-test-service = { path = "../../../node/test-service" }

# Substrate dependencies
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-light = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"],  default-features = false , branch = "seun-babe-manual-seal" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
